--- a/jugadora/templates/jugadora/jugadora_confirm_delete.html
+++ b/jugadora/templates/jugadora/jugadora_confirm_delete.html
@@ -5,7 +5,7 @@
     <p>Esta seguro de que quiere eliminar {{ jugadora.Nombre }} de manera permanente?</p>
   <div class="modal-footer">
     <button id="cancel" type="button" class="cancel cancel-delete" data-target="delete">Cancelar</button>
-    <button class="delete-color" type="submit">Eliminar</button>
+    <button class="delete-color" style="background-color: #F19800" type="submit">Eliminar</button>
 </form>
 <script>
 $("#cancel").click(function() {
