--- a/static/index.css
+++ b/static/index.css
@@ -358,7 +358,7 @@ p {
 }
 
 .delete-color {
-  background-color: #ff7178;
+  background-color: #F19800;
   border-radius: 50px;
   border-style: none;
   box-shadow: 0 8px 6px 0 rgba(239, 239, 239, 0.47);
