--- a/administrador/templates/administrador/lista_preRegistro.html
+++ b/administrador/templates/administrador/lista_preRegistro.html
@@ -89,7 +89,7 @@
             var id = $(this).attr("data-id") ;
             var nombre = $(this).attr("data-nombre") ;
             $(".modal-content").html("<h4>¿Desea eliminar el pre registro de <strong>" + nombre + "</strong>?</h4>") ;
-            var botones = '<a href="#cancelar" class="modal-action modal-close cancel cancel-delete">Cancelar</a>  <a href="/administrador/eliminar_PreRegistro/' + id + '" class="modal-action modal-close delete-color confirmar-eliminar">Aceptar</a>' ;
+            var botones = '<a href="#cancelar" class="modal-action modal-close cancel cancel-delete">Cancelar</a>  <a href="/administrador/eliminar_PreRegistro/' + id + '" class="modal-action modal-close delete-color confirmar-eliminar" style="background-color: #F19800">Aceptar</a>' ;
             $(".modal-footer").html(botones) ;
         });
 
