--- a/equipo/templates/equipo/equipo_confirm_delete.html
+++ b/equipo/templates/equipo/equipo_confirm_delete.html
@@ -7,7 +7,7 @@
     </div>
     <div class="modal-footer">
       <button id="cancel" type="button" class="cancel cancel-delete" data-target="delete">Cancelar</button>
-      <button class="delete-color" type="submit">Eliminar</button>
+      <button class="delete-color" style="background-color: #F19800" type="submit">Eliminar</button>
     </div>
   </form>
 <script>
