--- a/equipo/templates/equipo/equipo_detail.html
+++ b/equipo/templates/equipo/equipo_detail.html
@@ -75,7 +75,7 @@
           <p><strong>Posición:</strong> {{ jugadora.get_Posicion_display }}</p>
         </div>
         <div class="secondary-content">
-          <a class="modal-trigger delete-button" href="#borrarJugadorEquipoModal">
+          <a class="modal-trigger delete-button" href="#borrarJugadorEquipoModal{{ jugadora.id}}">
             <i class="medium material-icons icon-orange">delete</i>
           </a>
           <a href="{% url 'jugadora:editar_jugadora' jugadora.id %}">
@@ -83,7 +83,7 @@
            </a>
         </div>
       </li>
-      <div id="borrarJugadorEquipoModal" class="modal">
+      <div id="borrarJugadorEquipoModal{{ jugadora.id }}" class="modal">
         <form action="{% url 'equipo:eliminar_jugadora' equipo.id jugadora.id %}" method="post">
           {% csrf_token %}
           <div class="modal-content">
